artifacts/step38-public-ingress/20260225-152459/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: osdu-core:networking.k8s.io/Ingress:osdu-core/osdu-api-public
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, data-partition-id,
      correlation-id, Accept
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, DELETE, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  creationTimestamp: "2026-02-18T14:45:05Z"
  generation: 5
  name: osdu-api-public
  namespace: osdu-core
  resourceVersion: "15308921"
  uid: 1a0510f5-b837-465a-9ad2-6cd9340d0860
spec:
  ingressClassName: nginx
  rules:
  - host: api-do-osdu.esstar.com.vn
    http:
      paths:
      - backend:
          service:
            name: osdu-partition
            port:
              number: 8080
        path: /api/partition/
        pathType: Prefix
      - backend:
          service:
            name: osdu-entitlements
            port:
              number: 8080
        path: /api/entitlements/
        pathType: Prefix
      - backend:
          service:
            name: osdu-legal
            port:
              number: 8080
        path: /api/legal/
        pathType: Prefix
      - backend:
          service:
            name: osdu-schema
            port:
              number: 8080
        path: /api/schema-service/
        pathType: Prefix
      - backend:
          service:
            name: osdu-storage
            port:
              number: 8080
        path: /api/storage/
        pathType: Prefix
      - backend:
          service:
            name: osdu-indexer
            port:
              number: 8080
        path: /api/indexer/
        pathType: Prefix
      - backend:
          service:
            name: osdu-search
            port:
              number: 8080
        path: /api/search/
        pathType: Prefix
      - backend:
          service:
            name: osdu-file
            port:
              number: 8080
        path: /api/file/
        pathType: Prefix
      - backend:
          service:
            name: osdu-dataset
            port:
              number: 8080
        path: /api/dataset/
        pathType: Prefix
      - backend:
          service:
            name: osdu-workflow
            port:
              number: 8080
        path: /api/workflow/
        pathType: Prefix
      - backend:
          service:
            name: register
            port:
              number: 80
        path: /api/register/
        pathType: Prefix
      - backend:
          service:
            name: osdu-unit
            port:
              number: 8080
        path: /api/unit/
        pathType: Prefix
      - backend:
          service:
            name: osdu-crs-catalog
            port:
              number: 8080
        path: /api/crs/catalog/
        pathType: Prefix
      - backend:
          service:
            name: osdu-crs-conversion
            port:
              number: 8080
        path: /api/crs/converter/
        pathType: Prefix
      - backend:
          service:
            name: osdu-wellbore
            port:
              number: 8080
        path: /api/os-wellbore-ddms/
        pathType: Prefix
      - backend:
          service:
            name: osdu-seismic-store
            port:
              number: 5000
        path: /api/seismic-store/
        pathType: Prefix
  tls:
  - hosts:
    - api-do-osdu.esstar.com.vn
    secretName: cf-origin-osdu-api-tls
status:
  loadBalancer:
    ingress:
    - ip: 10.118.0.6
    - ip: 10.118.0.7
